2010-01-23 Borut Razem <borut.razem AT siol.net>

	* src/SDCCicode.c, src/SDCCast.c, src/SDCCast.h:
	  fixed bug #1767885: Parameters lost from scope of intermediate inline function
	  applied patches from Pavel Pisa; tahks Pavel
	* support/regression/tests/inline.c:
	  merged inline regression tests bug1717305.c, bug1864577.c and bug 1767885

2010-01-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, sdas/linksrc/lkmain.c, sdas/linksrc/aslink.h:
	  fixed bug #2933892 - Weird default ouput location for linker - regression

2010-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Taking the address of _Bool works on the z80 and gbz80 ports.

2010-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCglue.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  device/include/stdbool.h,
	  device/lib/z80/crt0.s:
	  Support for bool on the Z80 (RFE #1751355).
	* device/lib/z80/asm_strings.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80/stubs.s,
	  device/lib/z80/fstubs.s,
	  device/lib/z80/heap.s,
	  device/lib/gbz80/stubs.s,
	  device/lib/gbz80/fstubs.s,
	  device/lib/gbz80/asm_strings.s,
	  device/lib/gbz80/heap.s:
	  Z80 library cleanup.
	* src/SDCCpeeph.c:
	  Enable jump-to-jump optimizations for jump table entries.

2010-01-16 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: sfr at to __sfr __at

2010-01-16 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/SDCCmain.c: added ReadcfgFile() - get options from
	  a sdcc.cfg file.

2010-01-15 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/hc08/support.c,
	  support/regression/ports/pic14/support.c,
	  support/regression/ports/pic16/support.c,
	  support/regression/ports/xa51/support.c,
	  support/regression/tests/macro.c:
	  _asm and _endasm changed to __asm and __endasm

2010-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/gbz80/string.c: